tests/ui/traits/default_auto_traits/default-bounds.stderr
error[E0277]: the trait bound `Forbidden: SyncDrop` is not satisfied
  --> $DIR/default-bounds.rs:37:9
   |
LL |     bar(Forbidden);
   |     --- ^^^^^^^^^ the trait `SyncDrop` is not implemented for `Forbidden`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `bar`
  --> $DIR/default-bounds.rs:33:8
   |
LL | fn bar<T: Leak>(_: T) {}
   |        ^ required by this bound in `bar`

error[E0277]: the trait bound `Forbidden: Leak` is not satisfied
  --> $DIR/default-bounds.rs:37:9
   |
LL |     bar(Forbidden);
   |     --- ^^^^^^^^^ the trait `Leak` is not implemented for `Forbidden`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `bar`
  --> $DIR/default-bounds.rs:33:11
   |
LL | fn bar<T: Leak>(_: T) {}
   |           ^^^^ required by this bound in `bar`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
